# Mobile_Wiki

./: .env  .env_examples  .gitignore  README.md  pyproject.toml
models/: helpers.py
models/controls/: page_search_results.py  search.py
tests/: conftest.py  test_wikipedia_app.py
wikipedia_app/models/controls/: page_search_results.py  search.py
wikipedia_app/utils/: attachment.py
wikipedia_app/utils/browserstack/: get.py
